last_errors_check.txt
cargo :     Checking server v0.1.0 
(C:\Users\joela\dev\lasertargets\server)
At line:1 char:1
+ cargo check -p server --test integrationtest 2>&1 | Out-File 
-FilePat ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking se... 
   targets\server):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0412]: cannot find type `QuinnetServerEndpoint` in 
module `bevy_quinnet::server`
   --> server\src\plugins\network.rs:68:42
    |
 68 |     endpoint: &mut 
bevy_quinnet::server::QuinnetServerEndpoint,
    |                                          
^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name 
exists: `QuinnetServerPlugin`
    |
   ::: C:\Users\joela\.cargo\registry\src\index.crates.io-1949cf
8c6b5b557f\bevy_quinnet-0.19.0\src\server.rs:530:1
    |
530 | pub struct QuinnetServerPlugin {
    | ------------------------------ similarly named struct 
`QuinnetServerPlugin` defined here

error[E0412]: cannot find type `QuinnetServerEndpoint` in 
module `bevy_quinnet::server`
   --> server\src\plugins\network.rs:84:42
    |
 84 |     endpoint: &mut 
bevy_quinnet::server::QuinnetServerEndpoint,
    |                                          
^^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name 
exists: `QuinnetServerPlugin`
    |
   ::: C:\Users\joela\.cargo\registry\src\index.crates.io-1949cf
8c6b5b557f\bevy_quinnet-0.19.0\src\server.rs:530:1
    |
530 | pub struct QuinnetServerPlugin {
    | ------------------------------ similarly named struct 
`QuinnetServerPlugin` defined here

For more information about this error, try `rustc --explain 
E0412`.
error: could not compile `server` (lib) due to 2 previous errors
